test/error/exp/ptr/test-dereference-type/p.pas
program test_dereference_type;
var a: integer;
begin
    a := (^integer)^;
end.
